force-app/main/default/objects/Product2/fields/couponId__c.field-meta.xml
<CustomField>
    <fullName>couponId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links each Product to its corresponding Coupon Code for managing discounts or promotional offers.</description>
    <label>Coupon</label>
    <referenceTo>CouponCodes__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>