force-app/main/default/objects/Product2/fields/offerId__c.field-meta.xml
<CustomField>
    <fullName>offerId__c</fullName>
    <description>Stores the coupon code identifier linked to the product.</description>
    <label>Offer Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>